# AutoLava_AI

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  compose.temporary.yaml  compose.yaml  start-autolava.bat
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase_1.py  0001_sqlite_baseline.py  0002_company_settlement.py  0002_structural_rollback.py  0003_audit_rollbackable.py  0004_usability_foundation.py  0005_structured_dashboard_cards.py  0006_timestamp_contracts.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  database.py  security.py
backend/app/events/: __init__.py  ledger.py
backend/app/models/: __init__.py  audit.py  base.py  identity.py  income_config.py  ledger.py  operations.py  settlement.py
backend/app/schemas/: admin.py  auth.py  charts.py  dashboard.py  database.py  income_config.py  ledger.py  settlement.py  time.py
backend/app/scripts/: create_admin.py  inspect_runtime_database.py
backend/app/services/: access.py  analytics.py  audit.py  briefing.py  export.py  income_config.py  ledger.py  operations_retention.py  owner.py  record_payload.py  retention.py  rollback.py  scheduler.py  settlement.py  sqlite_backup.py  weather.py
backend/tests/: conftest.py  test_create_admin.py  test_deployment_config.py  test_health.py  test_ledger_events.py  test_local_launcher.py  test_runtime_database_guard.py  test_schema.py  test_sqlite_database.py  test_sqlite_migration.py
backend/tests/api/: test_admin.py  test_auth.py  (+12 more)
(+216 files in other folders)
