[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autolava-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic",
  "apscheduler",
  "asyncmy",
  "bcrypt",
  "cryptography",
  "fastapi",
  "httpx",
  "openpyxl",
  "pydantic-settings",
  "pyjwt",
  "sqlalchemy>=2,<3",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "pyyaml", "respx", "ruff"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["app"]
